--- a/atelier1/.htaccess
+++ b/atelier1/.htaccess
@@ -1,4 +1,4 @@
 AuthName "Accès protégé"
 AuthType Basic
-AuthUserFile /home/galacwhite/www/.htpasswd
+AuthUserFile /home/galacwhite/www/atelier1/.htpasswd
 Require valid-user
